# Claude

./: .gitignore  README.md
PlanB/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
PlanB/backend/apps/: conftest.py
PlanB/backend/apps/accounts/: adapter.py  admin.py  models.py  serializers.py  tests.py  views.py
PlanB/backend/apps/accounts/migrations/: 0001_initial.py
PlanB/backend/apps/ai/: agents.py  prompts.py  tests.py  urls.py  views.py
PlanB/backend/apps/automation/: apps.py  executor.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
PlanB/backend/apps/automation/migrations/: 0001_initial.py
PlanB/backend/apps/calendars/: admin.py  apps.py  crypto.py  models.py  serializers.py  tests.py  urls.py  views.py
PlanB/backend/apps/calendars/migrations/: 0001_initial.py  0002_calendarevent_color.py  0003_calendarevent_external_id_and_more.py  0004_timetreeintegration.py
PlanB/backend/apps/files/: admin.py  conftest.py  models.py  serializers.py  tests.py  urls.py  views.py
PlanB/backend/apps/files/migrations/: 0001_initial.py
PlanB/backend/apps/notes/: models.py  serializers.py  tests.py  urls.py  views.py
PlanB/backend/apps/notes/migrations/: 0001_initial.py  0002_add_note_folder.py
PlanB/backend/apps/notifications/: admin.py  apps.py  conftest.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
PlanB/backend/apps/notifications/migrations/: 0001_initial.py  0002_notification_link_notification_sub_and_more.py
PlanB/backend/apps/planner/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
PlanB/backend/apps/planner/migrations/: 0001_initial.py  0002_weeklyreview.py  0003_dailyentry_emotion_tags_dailyentry_gratitude_and_more.py
PlanB/backend/apps/projects/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
PlanB/backend/apps/projects/migrations/: 0001_initial.py  0002_project_color.py  0003_add_research_fields.py  0004_projecttemplate.py  0005_seed_templates.py
PlanB/backend/apps/research/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
PlanB/backend/apps/tasks/: admin.py  analytics.py  apps.py  models.py  serializers.py  signals.py  sprint_urls.py  tests.py  urls.py  views.py
PlanB/backend/apps/workspaces/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
PlanB/backend/config/: urls.py
PlanB/backend/config/settings/: base.py  development.py  production.py  test.py
(+139 files in other folders)
